# fetch-latest-dump

./: README.md  deploy.txt  setup.cfg  setup.py  test.py  workspace.code-workspace
.github/workflows/: pytest.yml
fetch_latest_file/: __init__.py  config.py  fetch_latest_file.py
